--- a/indexUmind.html
+++ b/indexUmind.html
@@ -36,7 +36,7 @@
         </div>
       </header>
       <div class="container">
-        <h1>IT’S TIME TO <br />MAKE WORK BETTER</h1>
+        <h1>IT'S TIME TO <br />MAKE WORK BETTER</h1>
         <p>
           Transform mental health at work through the power of science and AI –
           so employees can thrive in and outside of work.
@@ -46,12 +46,11 @@
       <div class="container">
         <div class="parentImageContainer">
           <div class="imageContainer1">
-            f
             <img src="beat.png" alt="" style="width: 100%; height: 100%" />
           </div>
           <div class="imageContainer2">
             <img
-              src="leaders-thumb.svg"
+              src="leadership.jpeg"
               alt=""
               style="width: 100%; height: 100%"
             />
@@ -120,7 +119,7 @@
                 Revitalize your organisation's mental health through accessible
                 therapy, advanced wellbeing tools, and content backed by science
               </p>
-              <img src="yourWellBeing.svg" alt="" class="wellbeing" />
+              <img src="leaders-thumb.svg" alt="" class="wellbeing" />
             </div>
             <div class="card3">
               <div class="userContainer">
@@ -224,7 +223,7 @@
       <section id="evidence" class="evidence">
         <div class="containers">
           <div class="title">
-            <h3>Ourevidence</h3>
+            <h3>Our Evidence</h3>
             <p>
               Proven results make Unmind the trusted choice for transforming
               workplace mental health.
